setting sound btn style

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </button>
         <button
           data-action="toggleMusic"
-          data-sound="coffee"
+          data-sound="coffee-shop"
           class="ph ph-storefront coffee"
         >
           <span class="sr-only">Cofee shop sound</span>
